# autoware.privately-owned-vehicles

./: README.md  annotate_data.py
Models/data_parsing/BlindSpot/WoodScape/: README.md
Models/data_utils/: load_data_auto_steer.py
Models/exports/: README.md  convert_pytorch_to_onnx.py
Models/exports/quantization/: README.md
Models/exports/quantization/PTQ/AutoDrive/: autodrive_ptq.py
Models/exports/quantization/QAT/AutoDrive/: autodrive_qat.py
Models/exports/quantization/QAT/SceneSeg/: benchmark_qat_model.py  quantize_model_sceneseg.py
Models/model_components/EgoSpeed/: .gitignore  egospeed_backbone.py  egospeed_head.py  egospeed_neck.py  egospeed_network.py  egospeed_utils.py
Models/model_library/AutoSteer/: README.md
Models/training/: train_autodrive_qat.py
Models/visualizations/AutoDrive/: image_visualization.py  video_visualization.py
VisionPilot/: CMakeLists.txt
VisionPilot/Iceoryx/: CMakeLists.txt  roudi_config.toml  run_iceoryx_demo.sh
VisionPilot/Iceoryx/include/: iceoryx_topic.hpp
VisionPilot/Iceoryx/src/: publisher_node.cpp  subscriber_node.cpp
VisionPilot/app/: CMakeLists.txt  vision_pilot.cpp
VisionPilot/config/: vision_pilot.conf  vision_pilot.conf.example  vision_pilot_test.conf
VisionPilot/development_releases/1.0/: CMakeLists.txt  README.md
VisionPilot/development_releases/1.0/app/: CMakeLists.txt  vision_pilot.cpp
VisionPilot/development_releases/1.0/config/: H.yaml  V.yaml  vision_pilot.conf.example
VisionPilot/development_releases/1.0/modules/config/: CMakeLists.txt
VisionPilot/development_releases/1.0/modules/config/include/config/: vision_pilot_config.hpp
VisionPilot/development_releases/1.0/modules/config/src/: vision_pilot_config.cpp
VisionPilot/development_releases/1.0/modules/control/: CMakeLists.txt  README.md
VisionPilot/development_releases/1.0/modules/control/include/control/: lateral_control.hpp  longitudinal_control.hpp
VisionPilot/development_releases/1.0/modules/control/src/: lateral_control.cpp  longitudinal_control.cpp
VisionPilot/development_releases/1.0/modules/debug/: CMakeLists.txt
VisionPilot/development_releases/1.0/modules/debug/include/debug/: debug_draw.hpp
VisionPilot/development_releases/1.0/modules/debug/src/: debug_draw.cpp
VisionPilot/development_releases/1.0/modules/logging/: CMakeLists.txt
VisionPilot/development_releases/1.0/modules/logging/src/: logger.cpp
VisionPilot/development_releases/1.0/modules/models/auto_drive/: CMakeLists.txt  README.md
VisionPilot/development_releases/1.0/modules/models/auto_speed/: CMakeLists.txt  README.md
VisionPilot/development_releases/1.0/modules/models/auto_steer/: CMakeLists.txt  README.md
VisionPilot/development_releases/1.0/modules/models/engine/: CMakeLists.txt
VisionPilot/development_releases/1.0/modules/models/src/: auto_drive.cpp  inference.cpp
VisionPilot/development_releases/1.0/modules/safety_guardian/fusion/: CMakeLists.txt  README.md
VisionPilot/development_releases/1.0/modules/safety_guardian/fusion/include/fusion/: lateral_fusion.hpp
VisionPilot/development_releases/1.0/modules/safety_guardian/fusion/src/: lateral_fusion.cpp  longitudinal_fusion.cpp
VisionPilot/development_releases/1.0/modules/safety_guardian/planning/: CMakeLists.txt  README.md
VisionPilot/development_releases/1.0/modules/sensing/camera_interface/: CMakeLists.txt
VisionPilot/development_releases/1.0/modules/sensing/can_interface/: CMakeLists.txt  README.md
VisionPilot/development_releases/1.0/modules/sensing/image_preprocessing/: README.md
VisionPilot/development_releases/1.0/modules/sensing/v4l2_interface/: CMakeLists.txt
VisionPilot/development_releases/1.0/modules/visualization/: CMakeLists.txt  README.md
VisionPilot/development_releases/1.0/modules/visualization/include/visualization/: visualization.hpp  visualization_to_rtsp.hpp  visualization_to_webrtc.hpp
VisionPilot/development_releases/1.0/modules/visualization/src/: visualization.cpp  visualization_to_rtsp.cpp  visualization_to_webrtc.cpp
VisionPilot/development_releases/1.0/scripts/: find_homography_C_matrix.py
VisionPilot/modules/common/include/common/: types.hpp
VisionPilot/modules/config/include/config/: vision_pilot_config.hpp
VisionPilot/modules/config/src/: vision_pilot_config.cpp
VisionPilot/modules/debug/include/debug/: debug_draw.hpp
VisionPilot/modules/debug/src/: debug_draw.cpp
VisionPilot/modules/middleware_interfaces/ros2_interface/vehicle_ros2_interface/: CMakeLists.txt  README.md
VisionPilot/modules/middleware_interfaces/ros2_interface/vehicle_ros2_interface/include/vehicle_ros2_interface/: vehicle_ros2_interface.hpp
VisionPilot/modules/middleware_interfaces/ros2_interface/vehicle_ros2_interface/src/: vehicle_ros2_interface.cpp
VisionPilot/modules/models/include/models/: inference.hpp
VisionPilot/modules/models/src/: inference.cpp
VisionPilot/modules/safety_guardian/fusion/include/fusion/: lateral_fusion.hpp  longitudinal_fusion.hpp
VisionPilot/modules/safety_guardian/fusion/src/: lateral_fusion.cpp  longitudinal_fusion.cpp
VisionPilot/modules/safety_guardian/planning/include/planning/: lateral_planning.hpp  longitudinal_planning.hpp  planning.hpp
VisionPilot/modules/safety_guardian/planning/src/: lateral_planning.cpp  longitudinal_planning.cpp  planning.cpp
VisionPilot/modules/sensing/vehicle_interface/: CMakeLists.txt
VisionPilot/modules/sensing/vehicle_interface/include/vehicle_interface/: can_interface.hpp  vehicle_interface.hpp
VisionPilot/modules/sensing/vehicle_interface/src/: can_interface.cpp
VisionPilot/modules/visualization/include/visualization/: visualization.hpp
VisionPilot/modules/visualization/src/: visualization.cpp
VisionPilot/scripts/: find_homography_C_matrix.py
VisionPilot/software_defined_vehicle/OpenADKit/AutoSpeed/: README.md  launch_autospeed.sh
VisionPilot/software_defined_vehicle/OpenADKit/AutoSpeed/launch/: run_objectFinder.sh
VisionPilot/tests/app/: CMakeLists.txt  test_vision_pilot.cpp
VisionPilot/tests/safety_guardian/planning/: test_planning.cpp
(+45 files in other folders)
